# microkanren

./: LICENSE  README.md  fourmolu.yaml  microkanren.cabal
src/: MicroKanren.hs
src/Language/: MicroKanren.hs
src/Language/MicroKanren/: Stdlib.hs
test/: Main.hs
